# footy_game

./: IMPLEMENTATION_STATUS.md  README.md  railway.toml  requirements.txt
backend/: .env  .env.example  Dockerfile  README.md  afl_manager.db  alembic.ini  docker-compose.yml  pyproject.toml  run.py  seed_data.py  start.sh
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: clubs.py  fixtures.py  management.py  matches.py  players.py  seasons.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
backend/app/services/: advanced_simulation.py  enhanced_simulation.py  fixture_generator.py  ladder.py  player_generator.py  season_manager.py  simulation.py
backend/migrations/: env.py
backend/migrations/versions/: 909b76e04b8a_initial_migration.py
backend/static/: app.js  index.html  styles.css
docs/: AFL_Manager_Overview.md  backend_plan.md  frontend_plan.md  site_overview.md
